force-app/main/default/objects/User/fields/Biz_Role__c.field-meta.xml
<CustomField>
    <fullName>Biz_Role__c</fullName>
    <label>Biz Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broking Support</fullName>
            </value>
            <value>
                <fullName>CBO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>ITAdmin</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Risk Consulting</fullName>
            </value>
            <value>
                <fullName>Biz Admin</fullName>
                <isActive>false</isActive>
                <label>Biz Admin</label>
            </value>
            <value>
                <fullName>Broker Support</fullName>
                <isActive>false</isActive>
                <label>Broker Support</label>
            </value>
            <value>
                <fullName>CRS</fullName>
                <isActive>false</isActive>
                <label>CRS</label>
            </value>
            <value>
                <fullName>Credit</fullName>
                <isActive>false</isActive>
                <label>Credit</label>
            </value>
            <value>
                <fullName>KYC</fullName>
                <isActive>false</isActive>
                <label>KYC</label>
            </value>
            <value>
                <fullName>정청산</fullName>
                <isActive>false</isActive>
                <label>정청산</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>