force-app/main/default/objects/User/fields/BizRoleTxt__c.field-meta.xml
<CustomField>
    <fullName>BizRoleTxt__c</fullName>
    <label>Biz Role (txt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>