force-app/main/default/objects/User/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO(KR)</fullName>
            </value>
            <value>
                <fullName>CEO(Re)</fullName>
            </value>
            <value>
                <fullName>CEO(VN)</fullName>
            </value>
            <value>
                <fullName>CRS1본부</fullName>
                <isActive>false</isActive>
                <label>CRS1본부</label>
            </value>
            <value>
                <fullName>CRS2본부</fullName>
                <isActive>false</isActive>
                <label>CRS2본부</label>
            </value>
            <value>
                <fullName>MCS그룹</fullName>
                <isActive>false</isActive>
                <label>MCS그룹</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>법인장</fullName>
                <isActive>false</isActive>
                <label>법인장</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>