force-app/main/default/objects/User/fields/HourlyRate__c.field-meta.xml
<CustomField>
    <fullName>HourlyRate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>