force-app/main/default/objects/User/fields/LatestContractNum__c.field-meta.xml
<CustomField>
    <fullName>LatestContractNum__c</fullName>
    <label>LatestContractNum</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>