force-app/main/default/objects/User/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Phone</type>
</CustomField>