force-app/main/default/objects/User/fields/OrgInfoId__c.field-meta.xml
<CustomField>
    <fullName>OrgInfoId__c</fullName>
    <label>Org Info Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>