force-app/main/default/objects/User/fields/OrgLv2_del__c.field-meta.xml
<CustomField>
    <fullName>OrgLv2_del__c</fullName>
    <label>Org Lv2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv2</valueSetName>
    </valueSet>
</CustomField>