force-app/main/default/objects/User/fields/OrgLv3_del__c.field-meta.xml
<CustomField>
    <fullName>OrgLv3_del__c</fullName>
    <label>Org Lv3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv3</valueSetName>
    </valueSet>
</CustomField>