force-app/main/default/objects/User/fields/OrgLv4_del__c.field-meta.xml
<CustomField>
    <fullName>OrgLv4_del__c</fullName>
    <label>Org Lv4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv4</valueSetName>
    </valueSet>
</CustomField>